First review pass for project

--- a/src/main/asciidoc/product/fallback_content/legal_notice.adoc
+++ b/src/main/asciidoc/product/fallback_content/legal_notice.adoc
@@ -1,4 +1,4 @@
 
-Copyright (C)
+Copyright (C) The Narayana Authors
 
-The Narayana Authors SPDX short identifier: https://www.apache.org/licenses/LICENSE-2.0.html[Apache-2.0]
+SPDX short identifier: https://www.apache.org/licenses/LICENSE-2.0.html[Apache-2.0]
