--- a/src/main/asciidoc/project/jts/ots.adoc
+++ b/src/main/asciidoc/project/jts/ots.adoc
@@ -292,7 +292,7 @@ Interposition is required to use the {parentProduct} Advanced API.
 ====
 [source,java]
 ----
-
+include::{projectSourceDir}/jts/extras/simple_transactional_client.java[]
 ----
 ====
 
@@ -692,14 +692,14 @@ Only the `Resources` are automatically propagated to the parent transaction.
 
 [[_subtransaction_commit]]
 .Sub-transaction commit
-image::jts-sub-transaction-commit.png[]
+image::jts-sub-transaction_commit.png[]
 
 <<_subtransaction_rollback>> illustrates the impact of a sub-transaction rolling back.
 Any registered resources are discarded, and all `SubtransactionAwareResources` are informed of the transaction outcome.
 
 [[_subtransaction_rollback]]
 .Sub-transaction rollback
-image::jts-sub-transaction-rollback.png[]
+image::jts-sub-transaction_rollback.png[]
 
 <<_top_level_commit>> shows the activity diagram for committing a top-level transaction.
 sub-transactions within the top-level transaction which have also successfully committed propagate `SubtransactionAwareResources` to the top-level transaction.
